legend doesn't move

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ path:hover {
     border-color: black;
     position: absolute;
     top: 30%;
-    left: 79%;
+    left: 1200px;
 
 }
 #legendList{
